--- a/bootstrap_pagination/templates/bootstrap_pagination/pagination-bs4.html
+++ b/bootstrap_pagination/templates/bootstrap_pagination/pagination-bs4.html
@@ -1,15 +1,18 @@
 {% load bootstrap_pagination %}
-<nav>
+<nav aria-label="Page pagination">
   <ul class="pagination{% if size == "small" %} pagination-sm{% endif %}{% if size == "large" %} pagination-lg{% endif %}{% block extra_classes %}{% endblock %}">
 {% if show_first_last %}
     {% if not page.has_previous %}
       <li class="disabled page-item">
-        <span aria-hidden="true" title="First Page">{{ first_label }}</span>
+          <a href="#"  class="page-link">
+              <span aria-hidden="true" title="First Page">{{ first_label }}</span>
         <span class="sr-only">First Page</span>
+          </a>
+
       </li>
     {% else %}
       <li class="page-item">
-        <a title="First Page" href="{{ first_page_url|default:"#"|escape }}">
+        <a title="First Page" class="page-link" href="{{ first_page_url|default:"#"|escape }}">
           <span aria-hidden="true">{{ first_label }}</span>
           <span class="sr-only">First Page</span>
         </a>
@@ -19,12 +22,13 @@
 {% if show_prev_next %}
     {% if not page.has_previous %}
       <li class="disabled page-item">
+          <a href="#"  class="page-link">
         <span aria-hidden="true" title="Previous Page">{{ previous_label }}</span>
-        <span class="sr-only">Previous Page</span>
+              <span class="sr-only">Previous Page</span></a>
       </li>
     {% else %}
       <li class="page-item">
-        <a title="Previous Page" href="{{ previous_page_url|default:"#"|escape }}">
+        <a title="Previous Page" class="page-link" href="{{ previous_page_url|default:"#"|escape }}">
           <span aria-hidden="true">{{ previous_label }}</span>
           <span class="sr-only">Previous Page</span>
         </a>
@@ -33,24 +37,28 @@
 {% endif %}
 {% for pagenum, index_range, url in page_urls %}
     {% if page.number == pagenum %}
-        <li class="active page-item">
-            <span title="Current Page">{% if show_index_range %} {{ index_range }} {% else %} {{ pagenum }} {%endif %}</span>
+        <li class="active page-item active">
+            <a href="#" class="page-link">
+                <span title="Current Page">{% if show_index_range %} {{ index_range }} {% else %} {{ pagenum }} {%endif %}</span>
+            </a>
         </li>
     {% else %}
         <li class="page-item">
-            <a title="Page {{ pagenum }} of {{ page.paginator.num_pages }}" href="{{ url|escape }}">{% if show_index_range %} {{ index_range }} {% else %} {{ pagenum }} {%endif %}</a>
+            <a title="Page {{ pagenum }} of {{ page.paginator.num_pages }}"  class="page-link" href="{{ url|escape }}">{% if show_index_range %} {{ index_range }} {% else %} {{ pagenum }} {%endif %}</a>
         </li>
     {% endif %}
 {% endfor %}
 {% if show_prev_next %}
     {% if not page.has_next %}
       <li class="disabled page-item">
-        <span aria-hidden="true" title="Next Page">{{ next_label }}</span>
-        <span class="sr-only">Next Page</span>
+          <a href="#" class="page-link">
+              <span aria-hidden="true" title="Next Page">{{ next_label }}</span>
+              <span class="sr-only">Next Page</span>
+          </a>
       </li>
     {% else %}
       <li class="page-item">
-        <a title="Next Page" href="{{ next_page_url|default:"#"|escape }}">
+        <a title="Next Page"  class="page-link" href="{{ next_page_url|default:"#"|escape }}">
           <span aria-hidden="true">{{ next_label }}</span>
           <span class="sr-only">Next Page</span>
         </a>
@@ -65,7 +73,7 @@
       </li>
     {% else %}
       <li class="page-item">
-        <a title="Last Page" href="{{ last_page_url|default:"#"|escape }}">
+        <a title="Last Page"  class="page-link" href="{{ last_page_url|default:"#"|escape }}">
           <span aria-hidden="true">{{ last_label }}</span>
           <span class="sr-only">Last Page</span>
         </a>
